src/objects/SREC_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Acct_ID__c</fullName>
        <description>Used for GetFeedback survey in Conga bill</description>
        <formula>Residential_Equipment__r.Opportunity__r.Account.Id</formula>
        <inlineHelpText>Used for GetFeedback survey in Conga bill</inlineHelpText>
        <label>Acct ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_From_Account__c</fullName>
        <description>Used in conga bill</description>
        <formula>Residential_Equipment__r.Opportunity__r.Street_Address__c</formula>
        <inlineHelpText>Used in conga bill</inlineHelpText>
        <label>Address (From Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_Two__c</fullName>
        <description>Used in Conga bill</description>
        <formula>Residential_Equipment__r.Opportunity__r.City__c &amp;&quot;, &quot; &amp; Residential_Equipment__r.Opportunity__r.State__c &amp; &quot;, &quot; &amp; Residential_Equipment__r.Opportunity__r.Zip_Code__c</formula>
        <inlineHelpText>Used in Conga bill</inlineHelpText>
        <label>Address Line Two</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autopay_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is their autopay status at the time the SREC record was created and is populated via process builder.</description>
        <inlineHelpText>This is their autopay status at the time the SREC record was created and is populated via process builder.</inlineHelpText>
        <label>Autopay Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Formula_Field__c</fullName>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=a2F0a000001UxkB&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; &quot; + &quot;SREC Invoice&quot; +
&quot;&amp;congaemailtemplateid=a260a000006DzIa&quot; + 
&quot;&amp;emailsubject=Your Monthly SREC payment is here!&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;EmailAdditionalTo=&quot; + Email_text__c + 
&quot;&amp;emailfromid=0D20a0000004K0P&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Conga Formula Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SREC_Product__c</fullName>
        <formula>Residential_Equipment__r.Loan__r.Opportunity__r.SREC_Product__r.Name</formula>
        <label>Current SREC Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <description>Date the payment was issued to the customer.</description>
        <inlineHelpText>Date the payment was issued to the customer.</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <description>This is the days past due the customer was at the time the invoice was generated.</description>
        <inlineHelpText>This is the days past due the customer was at the time the invoice was generated.</inlineHelpText>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_formula__c</fullName>
        <formula>Residential_Equipment__r.Loan__r.Opportunity__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_text__c</fullName>
        <label>Email (text)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Generator_Nameplate_Capacity__c</fullName>
        <description>Used in conga bill</description>
        <formula>Residential_Equipment__r.Generator_Nameplate_Capacity__c</formula>
        <inlineHelpText>Used in conga bill</inlineHelpText>
        <label>Generator Nameplate Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <label>Invoice Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Year__c</fullName>
        <label>Invoice Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <formula>Residential_Equipment__r.Loan__r.Loan_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Hold_Reason__c</fullName>
        <label>Manual Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to withhold the payment. If this is checked, you must give a reason for the hold in the Manual Hold Reason box.</description>
        <inlineHelpText>Check to withhold the payment. If this is checked, you must give a reason for the hold in the Manual Hold Reason box.</inlineHelpText>
        <label>Manual Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <formula>Residential_Equipment__r.Fixed_Monthly_SREC_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityRE__c</fullName>
        <formula>Residential_Equipment__r.Opportunity__r.Id</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SREC Invoices</relationshipLabel>
        <relationshipName>SREC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residential_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residential Equipment</label>
        <referenceTo>Residential_Equipment__c</referenceTo>
        <relationshipLabel>SREC Invoices</relationshipLabel>
        <relationshipName>SREC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SREC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SREC Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SREC Invoices</relationshipLabel>
        <relationshipName>SREC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SREC_Product_static__c</fullName>
        <description>This is the SREC Product they had when the record was created.</description>
        <inlineHelpText>This is the SREC Product they had when the record was created.</inlineHelpText>
        <label>SREC Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SREC</label>
        <referenceTo>SREC__c</referenceTo>
        <relationshipLabel>SREC Invoices</relationshipLabel>
        <relationshipName>SREC_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SREC Invoice</label>
    <nameField>
        <label>SREC Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SREC Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>